# eevee

./: .dockerignore  .gitignore  ATOMIC_COMMITS.md  BENCHMARK_RESULTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  HIGH_CONFIDENCE_PROOF.md  ISSUE_LOCAL_MINIMA_ANALYSIS.md  README.md  SPECIATION_ANALYSIS.md  XOR_INVESTIGATION.md  cmp-bench  cmp-profile  profile
.github/agents/: researcher.md
.github/instructions/: instructions.md.instructions.md
.github/workflows/: ci.yml
atomic-patches/: 0001-Optimize-open_path-with-HashSet-pre-allocation.patch  0002-Optimize-reproduce_with-with-single-pass-max-finding.patch  0003-Optimize-crossover_eq-capacity-and-remove-shrink_to_.patch  0004-Optimize-crossover_ne-with-direct-array-access.patch  0005-Optimize-cloned-with-capacity-pre-allocation.patch  0006-Optimize-speciate-with-Vec-from-for-single-element-v.patch  0007-Optimize-NN-flush-to-reuse-existing-matrix.patch  0008-Optimize-NN-step-with-reusable-input-buffer.patch
benches/: alloc.rs  avg-weight-diff.rs  connection-rand-l.json  crossover-eq.rs  crossover-ne.rs  crossover.rs  ctrnn-rand-100.json  ctrnn-rand-100.rs  ctrnn.rs  disjoint-excess-count.rs  genome-mutate-bisection.rs  genome-mutate-connection.rs  genome-rand-100.json  genome.rs  innogen.rs  mutate-bisection.rs  mutate-connection.rs  mutate.rs  nn.rs  random.rs  reproduce.rs  seed.rs  speciate.rs  xor-100.rs
benches/data/: connection-rand-r.json  ctr-connection-rand-l.json  ctr-connection-rand-r.json  ctr-genome-rand-100.json  ctr-genome-xor-100.json  genome-xor-100.json
docs/: CONSTANTS.md
docs/design/: README.md  ROADMAP.md  configuration_abstraction.md  configuration_system.md  context_config_system.md  hooks_design.md
docs/research/: implementation_guide.md  recommendations_summary.md  research_findings.md
examples/: cart-pole.rs  high_confidence.rs  nes-tetris.rs  sentiment.rs  test_weighted_reproduction.rs  xor.rs  xor_debug.rs  xor_delta_analysis.rs  xor_diagnostic.rs  xor_diverse_init.rs  xor_genome_sizes.rs  xor_test.rs
examples/data/: tetris-start.sav
examples/nes-tetris/: main.rs
examples/sentiment/: main.rs
examples/sentiment/data/: negative.txt  positive.txt
src/: constants.rs  crossover.rs  ctrnn.rs  eval.rs  genome.rs  lib.rs  macros.rs  main.rs  network.rs  population.rs  random.rs  reproduce.rs  scenario.rs  serde_traits.rs  serialize.rs  specie.rs
src/genome/: connection.rs  mod.rs  node.rs  recurrent.rs
src/network/: continuous.rs  continuous_high_confidence_test.rs  mod.rs  non_bias.rs  recurrent.rs  serialize.rs  simple.rs
test-data/: ctrnn-rand-100.json
