[package]
name = "eevee"
version = "0.1.0"
edition = "2021"
description = "Generalized NeuroEvolution toolkit, based on NEAT"
license = "AGPL-3.0-or-later"

[dependencies]
rand = "0.9.0"
rand_distr = "0.5.0"
rulinalg = "0.4.2"
nes_rust = { git = "https://github.com/gastrodon/nes-rust", optional = true, features = [
  "no_apu",
  "no_render",
] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = { version = "1.0.139", features = ["preserve_order"] }
fxhash = "0.2.1"
rayon = { version = "1.10.0", optional = true }
paste = "1.0.15"
approx = { version = "0.5.1", optional = true }

[features]
approx = ["dep:approx"]
nes = ["nes_rust"]
parallel = ["rayon"]
smol_bench = []
watch_game = []

[[example]]
name = "xor"
required-features = ["approx"]

[[example]]
name = "nes-tetris"
required-features = ["nes"]

[[example]]
name = "sentiment"

[dev-dependencies]
criterion = "0.5.1"
flamegraph = "0.6.7"
toml-cli = "0.2.3"

[[bench]]
name = "crossover"
harness = false

[[bench]]
name = "innogen"
harness = false

[[bench]]
name = "mutate"
harness = false

[[bench]]
name = "nn"
harness = false

[[bench]]
name = "random"
harness = false

[[bench]]
name = "reproduce"
harness = false

[[bench]]
name = "speciate"
harness = false
