[package]
name = "eevee"
version = "0.2.0-1"
edition = "2021"
description = "Generalized NeuroEvolution toolkit, based on NEAT"
license = "AGPL-3.0-or-later"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"

[dependencies]
find-fold = "~0.1"
fxhash = "~0.2"
paste = "~1.0"
rand = "~0.9"
rand_distr = "~0.5"
rulinalg = "~0.4"
serde = { version = "~1.0", features = ["derive"] }
serde_json = { version = "~1.0", features = ["preserve_order"] }

approx = { version = "~0.5", optional = true }
nes_rust_slim = { version = "~0.2", optional = true }
rayon = { version = "~1.10", optional = true }
criterion = "~0.5"
criterion-macro = "~0.4"

[dev-dependencies]
criterion = "~0.5"
criterion-macro = "~0.4"
flamegraph = "~0.6"

[features]
approx = ["dep:approx"]
bench = []
nes = ["dep:nes_rust_slim"]
parallel = ["dep:rayon"]
smol_bench = []
watch_game = []

[[example]]
name = "xor"
required-features = ["approx"]

[[example]]
name = "nes-tetris"
required-features = ["nes"]

[[example]]
name = "sentiment"
