[package]
name = "eevee"
version = "0.1.0"
edition = "2021"
description = "Generalized NeuroEvolution toolkit, based on NEAT"
license = "AGPL-3.0-or-later"

[dependencies]
find-fold = "~0.1"
fxhash = "~0.2"
paste = "~1.0"
rand = "~0.9"
rand_distr = "~0.5"
rulinalg = "~0.4"
serde = { version = "~1.0", features = ["derive"] }
serde_json = { version = "~1.0", features = ["preserve_order"] }

approx = { version = "~0.5", optional = true }
nes_rust_slim = { version = "~0.2", optional = true }
rayon = { version = "~1.10", optional = true }

[dev-dependencies]
criterion = "~0.5"
flamegraph = "~0.6"
toml-cli = "~0.2"

[features]
approx = ["dep:approx"]
nes = ["dep:nes_rust_slim"]
parallel = ["dep:rayon"]
smol_bench = []
watch_game = []

[[example]]
name = "xor"
required-features = ["approx"]

[[example]]
name = "nes-tetris"
required-features = ["nes"]

[[example]]
name = "sentiment"

[[bench]]
name = "crossover"
harness = false

[[bench]]
name = "innogen"
harness = false

[[bench]]
name = "mutate"
harness = false

[[bench]]
name = "nn"
harness = false

[[bench]]
name = "random"
harness = false

[[bench]]
name = "reproduce"
harness = false

[[bench]]
name = "speciate"
harness = false

[[example]]
name = "xor_diagnostic"
required-features = ["approx"]

[[example]]
name = "xor_genome_sizes"
required-features = ["approx"]
